--- a/Exercise 6/css/header.css
+++ b/Exercise 6/css/header.css
@@ -2,11 +2,16 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 3rem 5rem;
 }
 
 .top-nav ul{
     display: flex;
     gap: 3rem;
+}
+
+.top-nav ul a{
+  font-size: .8125rem;
 }
 
 .show-hide-bar{
