--- a/Exercise 6/css/page-title.css
+++ b/Exercise 6/css/page-title.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  row-gap: 0.5rem;
 }
 
 .page-title h1 {
-  font-size: 3rem;
+  font-size: 3.065rem;
   font-weight: 700;
 }
 
